# sentiment-analysis

./: .gitignore  README.md  SentimentTracker.jsx
.githooks/: pre-commit
backend/: pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  seed.py
backend/app/routes/: __init__.py  analyses.py  analyze.py  lexicon.py
backend/app/scoring/: __init__.py  lexicon.py  llm.py  transformer.py
backend/app/sources/: __init__.py  hackernews.py  reddit.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js
frontend/src/components/: AnalysisHistory.jsx  LexiconEditor.jsx  SentimentTracker.jsx
