[project]
name = "sentiment-analysis-backend"
version = "0.1.0"
description = "FastAPI backend for multi-source forum sentiment analysis"
requires-python = ">=3.10"

dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",

    # Database
    "sqlalchemy>=2.0",

    # HTTP client for public JSON endpoints and HN
    "httpx>=0.27",

    # Reddit official API
    "praw>=7.8",

    # Anthropic Claude API client
    "anthropic>=0.39",
]

[project.optional-dependencies]
# The transformer pipeline is heavy (~500MB model download) and optional.
# Install with: pip install -e ".[transformer]"
transformer = [
    "transformers>=4.45",
    "torch>=2.4",
]

# Dev tools
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "httpx>=0.27",  # also used by TestClient
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
